Fix overflow bug on main page

--- a/styles/index.css
+++ b/styles/index.css
@@ -368,16 +368,19 @@ main {
 
 .home {
     padding-bottom: 10rem;
+}
+
+.containerNavAndHero {
     position: relative;
 }
 
-.home::after {
+.containerNavAndHero::after {
     content: '';
     position: absolute;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 6rem;
-    left: -1rem;
+    left: 0;
     background-image: url('../public/images/bg-pattern-home-2.svg');
     background-repeat: no-repeat;
     background-position: center 0rem;
@@ -557,9 +560,7 @@ main {
         padding-bottom: 14rem;
     }
 
-    .home::after {
-        left: -4rem;
-    }
+
 }
 
 @media screen and (min-width: 1024px) {
@@ -574,7 +575,7 @@ main {
 }
 
 @media screen and (min-width: 1440px) {
-    .home::after {
+    .containerNavAndHero::after {
         content: unset;
     }
 
